Stage & StageView components layout bugs fixed

--- a/src/assets/scss/components/_stage.scss
+++ b/src/assets/scss/components/_stage.scss
@@ -1,5 +1,5 @@
 .Stage {
-  min-width: 100vw;
+  min-width: -webkit-fill-available;
   scroll-snap-align: start;
   overflow-y: auto;
   overflow-x: hidden;
