--- a/src/assets/scss/layout/_grid.scss
+++ b/src/assets/scss/layout/_grid.scss
@@ -8,7 +8,7 @@
     z-index: 1;
   }
   .view{
-    overflow: scroll;
+    overflow: auto;
   }
   .Navbar {
     grid-row: 3;
